--- a/index.html
+++ b/index.html
@@ -58,21 +58,22 @@
             <div class="treatment-intro">
                 <h2>Nossos Tratamentos</h2>
 
-            <div class="treatment-wrapper">
+                <div class="treatment-wrapper">
 
-                <div class="treatment-bar" id="treatmentBar">
-                    <a href="#restauracao">Restauração</a>
-                    <a href="#clareamento">Clareamento</a>
-                    <a href="#limpeza">Limpeza</a>
-                    <a href="#extracao">Extração</a>
-                    <a href="#protese">Prótese</a>
-                    <a href="#clinicageral">Clínica Geral</a>
-                    <a href="#openForm">Receber novidades</a>
+                    <div class="treatment-bar" id="treatmentBar">
+                        <a href="#localizacao">Onde estamos</a>
+                        <a href="#restauracao">Restauração</a>
+                        <a href="#clareamento">Clareamento</a>
+                        <a href="#limpeza">Limpeza</a>
+                        <a href="#extracao">Extração</a>
+                        <a href="#protese">Prótese</a>
+                        <a href="#clinicageral">Clínica Geral</a>
+                        <a href="#openForm">Receber novidades</a>
+                    </div>
+
                 </div>
-
             </div>
-        </div>
-            
+
 
             <div class="services-grid">
 
@@ -109,7 +110,7 @@
                             respeitando a anatomia do dente e a saúde bucal como um todo,
                             garantindo conforto, durabilidade e um sorriso natural.
                         </p>
-                        
+
                     </div>
                 </div>
     </section>
@@ -315,6 +316,38 @@
             </div>
         </div>
     </section>
+    <section class="localizacao" id="localizacao">
+        <div class="container">
+
+            <div class="localizacao-grid">
+
+                <div class="localizacao-texto">
+                    <h2>Onde estamos</h2>
+                    <p class="texto-localizacao">
+                        Nossa clínica está localizada no <strong>centro de Brejo Santo (CE)</strong>,
+                        em frente à <strong>O Boticário</strong>, no <strong>primeiro andar</strong>,
+                        ao lado da <strong>Farmácia Santa Terezinha</strong>.
+                        <br><br>
+                        Para facilitar sua chegada, veja o mapa abaixo.
+                        Ao clicar em <strong>“Como chegar”</strong>, você será redirecionado para o
+                        <strong>Google Maps</strong>,
+                        onde será traçada automaticamente a rota mais próxima até a clínica. 👇
+                    </p>
+
+                    <button class="btn-mapa" onclick="abrirRota()">
+                        📍 Como chegar
+                    </button>
+                </div>
+
+                <div class="mapa">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d247.2341988103127!2d-38.98512756216187!3d-7.493141593647001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7a13e2702a236a9%3A0xcbc4daf25e22c3c5!2sR.%20Santa%20Teresinha%2C%2029%20-%20Centro%2C%20Brejo%20Santo%20-%20CE%2C%2063260-000!5e0!3m2!1spt-BR!2sbr!4v1767619651064!5m2!1spt-BR!2sbr"
+                        loading="lazy"></iframe>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- ================= CTA FINAL ================= -->
     <!-- Chamada direta para ação -->
     <section class="cta animate">
@@ -326,7 +359,7 @@
             </p>
 
             <a href="https://wa.me/5588997109168" class="btn-secondary" target="_blank">
-                Falar com a clínica agora
+                Falar com a Dra. Leila agora
             </a>
         </div>
     </section>
